--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -49,9 +49,9 @@
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
 
-    <div class="modal fade" style="box-sizing: border-box;">
-      <div class="modal-dialog" style="box-sizing: border-box;">
-        <div id="res_msg" class="modal-content" style="box-sizing: border-box;">
+    <div class="modal fade" style="width:auto; height:auto; display:table ">
+      <div class="modal-dialog" >
+        <div id="res_msg" class="modal-content">
             <!-- remote ajax call이 되는영역 -->
         </div>
       </div>
