div box-size test

--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -49,7 +49,7 @@
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
 
-    <div class="modal fade" style="width:auto; height:auto; display:table ">
+    <div class="modal fade" style="max-width: 100%; width: auto; display: table;">
       <div class="modal-dialog" >
         <div id="res_msg" class="modal-content">
             <!-- remote ajax call이 되는영역 -->
