div box-size test

--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -173,7 +173,7 @@
         {
             $("#res_msg").text("아이디는 8~12자의 영문과 숫자로만 입력하세요.");
             $('div.modal').modal();
-            id.focus();
+<!--            id.focus();-->
             return false;
         }
         else
@@ -189,7 +189,7 @@
             {
                 $("#res_msg").text("아이디는 8~12자의 영문과 숫자로만 입력하세요.");
                 $('div.modal').modal();
-                id.focus();
+<!--                id.focus();-->
                 return false;
             }
         }
@@ -198,7 +198,7 @@
         {
             $("#res_msg").text("이름을 입력하세요.");
             $('div.modal').modal();
-            name.focus();
+<!--            name.focus();-->
             return false;
         }
 
