--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -17,11 +17,15 @@
                     <div class="accountInfo">
                         <h2>계정 정보</h2>
                         <ul>
+                             <li>
+                             </li>
+                             <li>
+                             </li>
                             <li>
                                 <span>아이디</span>
                                 <div class="input_area">
-                                        <input type="text" name="regi_id" id="regi_id" class="register" minlength="8" maxlength="12" onkeyup="this.value=this.value.replace(/[^a-zA-Z-_0-9]/g," placeholder="영문 + 숫자 8자 이상 입력해주세요."/>
-                                        <button type="button" class="btn register w30" id="popbutton"   onClick="javascript:regi_checkId();">중복체크</button>
+                                     <input type="email" name="regi_email" id="regi_email" class="register" onkeyup="this.value=this.value.replace(/[^a-zA-Z-_0-9]/g," placeholder="정확히 입력해주세요." required>
+                                    <button type="button" class="btn register w30" id="popbutton" onClick="javascript:regi_checkId();">중복체크</button>
                                 </div>
                             </li>
                             <li>
@@ -34,12 +38,6 @@
                                 <span>휴대번호</span>
                                 <div class="input_area">
                                     <input type="text" name="regi_phone" id="regi_phone" class="login_inp" maxlength="11" placeholder="- 없이 입력하세요." required >
-                                </div>
-                            </li>
-                            <li>
-                                <span>이메일</span>
-                                <div class="input_area">
-                                    <input type="email" name="regi_email" id="regi_email" class="login_inp" onkeyup="this.value=this.value.replace(/[^a-zA-Z-_0-9]/g," required>
                                 </div>
                             </li>
                             <li>
@@ -110,16 +108,15 @@
     var popup_window;
     function regi_checkId()
     {
-        var id_pass_patten = /^[a-zA-Z0-9]{8,12}$/ // 아이디와 패스워드가 적합한지 검사할 정규식
-        var id = document.getElementById('regi_id');
+        var email_patten = /^[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}$/i;  // 이메일이 적합한지 검사할 정규식
+        var email = document.getElementById('regi_email');
 
 
-        if(!id_pass_patten.test(id.value))
+        if(!email_patten.test(email.value))
         {
-            $("#res_msg").text("아이디는 8~12자의 영문과 숫자로만 입력하세요.");
+            $("#res_msg").text("이메일 주소 형식을 맞춰주세요. (ex.runcoding@***.com)");
             $('div.modal').modal();
             chkId = 0;
-            id.focus();
             return false;
         }
         else
@@ -134,15 +131,18 @@
                 success:function(result){
                     if(result == 200)
                     {
-                         $("#res_msg").text("사용할 수 있는 ID 입니다.");
+                         $("#res_msg").text("사용할 수 있습니다.");
                           chkId = 1;
                     }
                     else
                     {
-                        $("#res_msg").text("사용할 수 없는 ID 입니다.");
-                        id.focus();
-                        id.value = "";
-                        chkId = 0;
+                        if(result == 202)
+                        {
+                            $("#res_msg").text("이미 가입자로 사용할 수 없습니다.");
+                            email.value = "";
+                        }
+                        else if(
+
                     }
                    $('div.modal').modal();
                 }
@@ -154,10 +154,9 @@
     function regi_submit()
     {
         //(아이디는 8~12자의 영문 대소문자와 숫자로만 입력) (패스워드는 8~12자의 영문 대소문자와 숫자로만 입력)
-        var id_pass_patten = /^[a-zA-Z0-9]{8,12}$/ // 아이디와 패스워드가 적합한지 검사할 정규식
+        var pass_patten = /^[a-zA-Z0-9]{8,12}$/ // 아이디와 패스워드가 적합한지 검사할 정규식
         var email_patten = /^[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}$/i;  // 이메일이 적합한지 검사할 정규식
 
-        var id = document.getElementById('regi_id');
         var name = document.getElementById('regi_name');
         var phone = document.getElementById('regi_phone');
         var email = document.getElementById('regi_email');
@@ -169,52 +168,10 @@
         var pass = document.getElementById('regi_pass');
         var pass_chk = document.getElementById('regi_pass_chk');
 
-        if(id.value.length == 0 || id.value.length < 8)
-        {
-            $("#res_msg").text("아이디는 8~12자의 영문과 숫자로만 입력하세요.");
-            $('div.modal').modal();
-<!--            id.focus();-->
-            return false;
-        }
-        else
-        {
-            if(!chkId)
-            {
-                $("#res_msg").text("아이디 중복체크 해주세요.");
-                $('div.modal').modal();
-                return false;
-            }
-
-            if(!id_pass_patten.test(id.value))
-            {
-                $("#res_msg").text("아이디는 8~12자의 영문과 숫자로만 입력하세요.");
-                $('div.modal').modal();
-<!--                id.focus();-->
-                return false;
-            }
-        }
-
-        if(name.value == "")
-        {
-            $("#res_msg").text("이름을 입력하세요.");
-            $('div.modal').modal();
-<!--            name.focus();-->
-            return false;
-        }
-
-        if(phone.value == "")
-        {
-            $("#res_msg").text("휴대폰 번호를 입력하세요.");
-            $('div.modal').modal();
-            phone.focus();
-            return false;
-        }
-
         if(email.value == "")
         {
             $("#res_msg").text("이메일 주소를 입력하세요.");
             $('div.modal').modal();
-            email.focus();
             return false;
         }
          else
@@ -223,16 +180,35 @@
             {
                 $("#res_msg").text("이메일 주소 형식을 맞춰주세요. (ex.runcoding@***.com)");
                 $('div.modal').modal();
-                email.focus();
+                return false;
+            }
+            if(!chkId)
+            {
+                $("#res_msg").text("중복체크 해주세요.");
+                $('div.modal').modal();
                 return false;
             }
         }
+
+        if(name.value == "")
+        {
+            $("#res_msg").text("이름을 입력하세요.");
+            $('div.modal').modal();
+            return false;
+        }
+
+        if(phone.value == "")
+        {
+            $("#res_msg").text("휴대폰 번호를 입력하세요.");
+            $('div.modal').modal();
+            return false;
+        }
+
 
         if(address01.value == "" || address02.value == "" || address03.value == "")
         {
             $("#res_msg").text("주소를 입력하세요.");
             $('div.modal').modal();
-            address03.focus();
             return false;
         }
 
@@ -240,16 +216,14 @@
         {
             $("#res_msg").text("비밀번호는 8~12자의 영문과 숫자로만 입력하세요.");
             $('div.modal').modal();
-            pass.focus();
             return false;
         }
         else
         {
-            if(!id_pass_patten.test(pass.value))
+            if(!pass_patten.test(pass.value))
             {
                 $("#res_msg").text("비밀번호는 8~12자의 영문과 숫자로만 입력하세요.");
                 $('div.modal').modal();
-                pass.focus();
                 return false;
             }
 
@@ -257,19 +231,17 @@
             {
                 $("#res_msg").text("비밀번호와 비밀번호 확인 번호가 다릅니다.");
                 $('div.modal').modal();
-                pass_chk.focus();
                 pass_chk.value = "";
                 return false;
             }
         }
 
-        if(id.value == pass.value)
+        if(email.value == pass.value)
         {
             $("#res_msg").text("아이디와 같은 비밀번호를 사용할 수 없습니다.");
             $('div.modal').modal();
             pass.value="";
             pass_chk.value = "";
-            pass.focus();
             return false;
 
         }
