--- a/main/templates/login/login.html
+++ b/main/templates/login/login.html
@@ -1,16 +1,15 @@
 {% load static %}
 {% include "common/head.html" %}
 <link rel="stylesheet" type="text/css" href="{% static 'resource/css/login.css' %}" />
-<input type="hidden" id="result" name="result" value="{{result}}">
 <div class="wrap login">
     <div class="loginBox">
         <h1>
             <a href="/"><img src="{% static 'resource/img/common/logo_login.png' %}" alt="런코딩"></a>
         </h1>
-        <form id="login_form" method="post" action="/login_form/">
-             {% csrf_token %}
+        <form id="login_form">
             <div class="input_area">
-                <input type="text" name="login_id" id="login_id" class="login_inp" placeholder="아이디를 입력해주세요." />
+                {% csrf_token %}
+                <input type="text" name="login_id" id="login_id" class="login_inp" placeholder="이메일을 입력해주세요." />
                 <input type="password" name="login_pass" id="login_pass" class="login_inp" placeholder="비밀번호를 입력해주세요." />
             </div>
         </form>
@@ -20,12 +19,12 @@
             <a href="#" class="link find">비밀번호 재설정</a>
         </div>
 
-        <div class="snsLogin">
-            <span>SNS계정 간편 로그인</span>
-            <a href="#"><img src="{% static 'resource/img/common/ico_naver.png' %}" alt="네이버 계정으로 로그인"></a>
-            <a href="#"><img src="{% static 'resource/img/common/ico_google.png' %}" alt="구글 계정으로 로그인"></a>
-            <a href="#"><img src="{% static 'resource/img/common/ico_facebook.png' %}" alt="페이스북 계정으로 로그인"></a>
-        </div>
+<!--        <div class="snsLogin">-->
+<!--            <span>SNS계정 간편 로그인</span>-->
+<!--            <a href="#"><img src="{% static 'resource/img/common/ico_naver.png' %}" alt="네이버 계정으로 로그인"></a>-->
+<!--            <a href="#"><img src="{% static 'resource/img/common/ico_google.png' %}" alt="구글 계정으로 로그인"></a>-->
+<!--            <a href="#"><img src="{% static 'resource/img/common/ico_facebook.png' %}" alt="페이스북 계정으로 로그인"></a>-->
+<!--        </div>-->
     </div>
     <!-- find password modal -->
     <div data-ml-modal="" id="modal01">
@@ -46,23 +45,67 @@
     </div>
 </div>
 
+<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/animate.min.css" />
+<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/css/jquery.modal.css" />
+<script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/jquery.modal.js"></script>
+<script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>
 
 <script>
     function login_submit()
     {
-        document.getElementById('login_form').submit();
+        var email_patten = /^[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}$/i;  // 이메일이 적합한지 검사할 정규식
+        var email = document.getElementById('login_id');
+        var pass = document.getElementById('login_pass');
+
+        if(email.value == "")
+        {
+            $("#res_msg").text("이메일 아이디를 입력해 주세요.");
+            $('div.modal').modal();
+            return false;
+        }
+        else if(!email_patten.test(email.value))
+        {
+            $("#res_msg").text("이메일 주소 형식을 맞춰주세요. (ex.runcoding@***.com)");
+            $('div.modal').modal();
+            return false;
+        }
+        else if(pass.value == "")
+        {
+            $("#res_msg").text("비밀번호를 입력해 주세요.");
+            $('div.modal').modal();
+            return false;
+        }
+        else
+        {
+            var login_frm = $('#login_form');
+
+             $.ajax({
+                    data: login_frm.serialize(),
+                    type: 'post',
+                    url: '/login_form/',
+                    dataType: 'json',
+                    success:function(result)
+                    {
+                        if(result == 200)
+                        {
+                             location.href="/";
+                             return true;
+                        }
+                        else if(result == 202)
+                        {
+                            $("#res_msg").text("회원 정보를 다시 확인해주세요.");
+                        }
+                        else if(result == 204)
+                        {
+                            $("#res_msg").text("가입자가 아닙니다. 회원가입을 해주세요.");
+                            email.value = "";
+                            pass.value = "";
+                        }
+                       $('div.modal').modal();
+                    }
+             });
+        }
     }
-    $(document).ready(function(){
-        var login_result = $("input[type=hidden][name=result]").val();
-        if(login_result == 202)
-        {
-            alert("비밀번호가 잘못 되었습니다.");
-        }
-        else if(login_result == 204)
-        {
-            alert("가입자가 아닙니다.");
-        }
-    });
 
 <!--     function page_move(some_data) {-->
 <!--        var form = document.createElement("form");-->
